# price-guardian-api

./: .air.toml  .env  .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum
cmd/pg-api/: main.go
migrations/: 0_init.up.sql  1_init.down.sql  1_init.up.sql  20211224102958_bookeeping.up.sql  20211224103003_init.up.sql
migrations/2021-02-24-011200_create_users/: down.sql  up.sql
migrations/2021-02-24-011200_initial/: down.sql  up.sql
src/: db.rs  graphql.rs  main.rs  models.rs  schema.rs
