[package]
name = "price-guardian-api"
version = "0.1.0"
authors = ["Konrad <konrad_here@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.2.2"
juniper = "0.15.3"
juniper_actix = "0.2.3"