[package]
name = "price-guardian-api"
version = "0.1.0"
authors = ["Konrad <konrad_here@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.2.2"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
juniper = "0.15.3"
juniper_actix = "0.2.3"
serde = "1.0.123"
serde_json = "1.0.62"
chrono = "0.4.19"